# ddi-qa

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  main.ipynb  pyproject.toml
deployment/: docker-compose.yaml
deployment/chat/: docker-compose.yaml
deployment/proxy/: docker-compose.yaml
deployment/proxy/certs/: generate_cert.bash  openssl.conf
deployment/proxy/conf/: nginx.conf
deployment/vector-database/: docker-compose.yaml
