[tool.poetry]
name = "ddi-chat"
version = "0.1.0"
description = ""
authors = ["RTae <natthanan.bhu@doctorasa.co>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
langchain = "^0.0.250"
google-cloud-aiplatform = "^1.29.0"
elasticsearch = "^8.9.0"
sentence-transformers = "^2.2.2"
streamlit = "^1.25.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
